; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Array.c_Array_Item.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Array.c_Array_Item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Array = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.Array*, i64)* @Array_Item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @Array_Item(%struct.Array* %0, i64 %1) #0 {
  %3 = alloca %struct.Array*, align 8
  %4 = alloca i64, align 8
  store %struct.Array* %0, %struct.Array** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.Array*, %struct.Array** %3, align 8
  %6 = getelementptr inbounds %struct.Array, %struct.Array* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to i8*
  %9 = load %struct.Array*, %struct.Array** %3, align 8
  %10 = call i64 @Array_Step(%struct.Array* %9)
  %11 = load i64, i64* %4, align 8
  %12 = mul i64 %10, %11
  %13 = getelementptr inbounds i8, i8* %8, i64 %12
  %14 = getelementptr inbounds i8, i8* %13, i64 4
  ret i8* %14
}

declare dso_local i64 @Array_Step(%struct.Array*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
